--- a/public/Product.html
+++ b/public/Product.html
@@ -23,10 +23,10 @@
                 <a class="nav-link active text-light" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="./Product.html">Product</a>
+                <a class="nav-link text-light" href="#">Product</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="#">
+                <a class="nav-link text-light" href="./About.html" >
                   About
                 </a>
               </li>
@@ -41,11 +41,22 @@
           </div>
         </div>
       </nav>
-    <h1>About</h1>
+    <h1 class="text-center p-4"> Our Product</h1>
+    <div class="container">
+        <div class="row" id="display">
+        
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </div>
+    </div>
+    
 
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="product.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
