--- a/public/Contact.html
+++ b/public/Contact.html
@@ -23,7 +23,7 @@
                 <a class="nav-link active text-light" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="#">Product</a>
+                <a class="nav-link text-light" href="./Product.html">Product</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-light" href="./About.html" >
@@ -31,7 +31,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="./Contact.html" tabindex="-1" >Contact</a>
+                <a class="nav-link text-light" href="#" tabindex="-1" >Contact</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -41,48 +41,52 @@
           </div>
         </div>
       </nav>
-    <h1 class="text-center p-4"> Our Product</h1>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="card mb-3" style="max-width: 100vw;">
-                    <div class="row g-0">
-                      <div class="col-md-4">
-                        <img src="./img/cardbuld.webp" class="img-fluid rounded-start" alt="...">
-                      </div>
-                      <div class="col-md-8">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+        <div class="row" style="height: 85vh;">
+            <div class="col-sm-6 d-flex justify-content-center"> 
+            <div style="width: 90%; height: 100%; display: flex; justify-content: center; align-items: center;">
+                <div>
+                    <h1> Contact us </h1>
+                <p> Need to get touch in us? Either fill out the form with your injuiry
+                    or further details you like to contact  </p>
+            </div>
+        </div>    
             </div>
             <div class="col-sm-6">
-                <div class="card mb-3" style="max-width: 640px;">
-                    <div class="row g-0">
-                      <div class="col-md-4">
-                        <img src="./img/cardbullb1.jpg" class="img-fluid rounded-start" alt="...">
-                      </div>
-                      <div class="col-md-8">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                        </div>
-                      </div>
+                <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;">
+                <div style="width: 90%; align-items: center;">
+                <div>
+                    <div>
+                    <p> First Name* </p>
+                    <input type="text" id="firstname" style="height: 5vh; width: 100%;">
                     </div>
-                  </div>
+                    <div>
+                        <p> Last Name* </p>
+                        <input type="text" id="lastname" style="height: 5vh; width: 100%;">
+                        </div>
+                <div>
+                    <p> Email* </p>
+                    <input type="email" id="email" style="height: 5vh; width: 100%;">
+                    </div>
+                    <div>
+                        <p> what can we help you with? </p>
+                        <textarea rows="4" id="comment" style="width: 100%;" name="comment" form="usrform">Enter text here...</textarea>
+                    </div>
+                    <div class="mt-3">
+                        <button type="button" class="btn btn-success" onclick="SubmitEvent()" > Submite </button>
+                    </div>
+                    </div>
             </div>
         </div>
     </div>
-    
+    </div>
+        </div>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="contact.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
