--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>Amolite</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark" style="background-color: rgb(14, 145, 14);">
+    <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
           <img src="./img/logo_png.png" class="text-light" width="150vw" alt="">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,11 +73,17 @@
         </button>
       </div>
     </div>
-    <h1>Home</h1>
+    <h1 class="text-center p-4 border-bottom"> PRODUCTS</h1>
+    <div class="container my-5">
+        <div class="row" id="display">
+        
+                      </div>
+                    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="index.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
